force-app/main/default/objects/Capability__c/Capability__c.object-meta.xml
<CustomObject>
    <label>Capability</label>
    <pluralLabel>Capabilities</pluralLabel>
    <nameField>
        <label>Capability Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Individual capability item within a category</description>
</CustomObject>