force-app/main/default/objects/Capability__c/fields/ArchiMate_Id__c.field-meta.xml
<CustomField>
    <fullName>ArchiMate_Id__c</fullName>
    <label>ArchiMate ID</label>
    <type>Text</type>
    <length>100</length>
    <externalId>true</externalId>
    <description>External ID from ArchiMate import</description>
</CustomField>