force-app/main/default/objects/Capability__c/fields/Capability_Category__c.field-meta.xml
<CustomField>
    <fullName>Capability_Category__c</fullName>
    <label>Capability Category</label>
    <type>MasterDetail</type>
    <referenceTo>Capability_Category__c</referenceTo>
    <relationshipLabel>Capabilities</relationshipLabel>
    <relationshipName>Capabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
</CustomField>