force-app/main/default/objects/Capability__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Base color for this capability (hex code)</description>
    <label>Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>