force-app/main/default/objects/Capability__c/fields/Hours_Override__c.field-meta.xml
<CustomField>
    <fullName>Hours_Override__c</fullName>
    <label>Hours Override</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Manual hours override (leave blank to use size-based calculation)</description>
</CustomField>