force-app/main/default/objects/Capability__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
                <default>true</default>
                <label>Phase 1</label>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>