force-app/main/default/objects/Capability__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
            <value>
                <fullName>XXXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>