force-app/main/default/objects/Capability__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>0</defaultValue>
</CustomField>